fix after failure at deploying backend

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 DATABASE_URL='postgresql://neondb_owner:npg_8g6GhPYeUznZ@ep-old-frost-a1yg88ix-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+CLERK_SECRET_KEY=sk_test_UwjDCzMtbrSC0oEvgnkPDWiwr29wERC5lVBfKG3VhO
+CLER_ISSUER=https://quality-hawk-2.clerk.accounts.dev
